--- a/Model_Api/Jenkinsfile
+++ b/Model_Api/Jenkinsfile
@@ -2,30 +2,38 @@ pipeline {
     agent any
     environment {
         DOCKER_TLS_VERIFY = "1"
-        DOCKER_HOST = "tcp://192.168.58.2:2376"              // Change this IP if your Minikube IP differs
-        DOCKER_CERT_PATH = "/var/lib/jenkins/.minikube/certs" // Ensure Jenkins user has access here
+        DOCKER_HOST = "tcp://192.168.58.2:2376" // Update with your minikube IP
+        DOCKER_CERT_PATH = "/var/lib/jenkins/.minikube/certs"
         MINIKUBE_ACTIVE_DOCKERD = "minikube"
-        KUBECONFIG = "/var/lib/jenkins/.kube/config"          // Path to kubeconfig for kubectl access
+        KUBECONFIG = "/var/lib/jenkins/.kube/config"
     }
     stages {
         stage('Set Docker Env to Minikube') {
             steps {
-                // Run eval in same shell session so Docker env vars apply for next steps
                 sh '''
                     eval $(minikube docker-env)
-                    docker version   # just to verify docker connection to minikube
+                    echo "[INFO] Docker environment set to Minikube."
+                    docker version
                 '''
             }
         }
         stage('Build Docker Image') {
             steps {
-                sh 'docker build -t ddd:1.0.0 .'  // Build your Docker image here
+                dir('Model_Api') {
+                    sh '''
+                        eval $(minikube docker-env)
+                        docker build -t ddd:1.0.0 .
+                    '''
+                }
             }
         }
         stage('Deploy to Kubernetes') {
             steps {
-                sh 'kubectl apply -f deployment.yaml'
-                sh 'kubectl apply -f service.yaml'
+                sh '''
+                    eval $(minikube docker-env)
+                    kubectl apply -f Model_Api/deployment.yaml
+                    kubectl apply -f Model_Api/service.yaml
+                '''
             }
         }
     }
